--- a/TP03MainProj/Views/Events/Attractions/Vietnamese.cshtml
+++ b/TP03MainProj/Views/Events/Attractions/Vietnamese.cshtml
@@ -4,12 +4,12 @@
     <!-- Famous Monument Section -->
     <div class="col-md-6">
         <div class="text-center mb-3">
-            <h3 class="fs-3 fw-bold bg-black w-50 text-white rounded">Famous Monument</h3>
+            <h3 class="fs-3 fw-bold bg-black w-50 text-white rounded-5">Famous Monument</h3>
         </div>
 
-        <div class="mt-3 shadow-sm p-3 bg-body rounded">
+        <div class="mt-3 shadow-lg p-3 bg-body rounded-5">
             <div class="text-center">
-                <img src="@Url.Content("~/Content/Images/Attractions/Filipino_Attraction.jpg")" class="img-fluid w-50 rounded shadow" alt="Chinese Attraction">
+                <img src="@Url.Content("~/Content/Images/Attractions/Filipino_Attraction.jpg")" class="img-fluid w-50 rounded-5 shadow" alt="Chinese Attraction">
             </div>
             <h4 class="fs-5 text-center fw-bold mt-1 mb-2 text-decoration-underline">Quang Minh Temple</h4>
             <p class="mx-auto w-75 ">
@@ -22,16 +22,16 @@
     <!-- Famous Restaurants Section -->
     <div class="col-md-6">
         <div class="mb-3 text-center">
-            <h3 class="fs-3 fw-bold bg-black w-50 text-white rounded">Famous Restaurants</h3>
+            <h3 class="fs-3 fw-bold bg-black w-50 text-white rounded-5">Famous Restaurants</h3>
         </div>
-        <div class="shadow-sm p-3 bg-body rounded p-4 mb-5">
+        <div class="shadow-lg p-3 bg-body rounded-5 p-4 mb-5">
             <h4 class="fw-bold mb-3 text-start text-decoration-underline">Pho Thin</h4>
             <p class="mx-auto" style="max-width: 90%;">
                 You can’t get more authentic than a 40-year-old recipe direct from Vietnam. Hanoi-based Pho Thin opened its first outlet on Melbourne’s Hardware Lane where you can try the signature dish, stir-fried rare beef pho. To level things up a bit, add a side of Vietnamese fried donuts, perfect for dunking and mopping up the aromatic broth.
 
             </p>
         </div>
-        <div class="shadow-sm p-3 bg-body rounded p-4 mb-5">
+        <div class="shadow-lg p-3 bg-body rounded-5 p-4 mb-5">
             <h4 class="fw-bold mb-3 text-start text-decoration-underline">Banh Mi Stand</h4>
             <p class="mx-auto" style="max-width: 90%;">
                 This tiny hole-in-the-wall banh mi shop has become a fast favourite with Melburnians. Pull up a little blue stool at Banh Mi Stand on Flinders Lane and feast on crispy rolls packed with pork, cold cuts, beef sausage and more. Don't forget to add a Vietnamese iced coffee to your order. Or try the salt coffee for a refreshing caffeine hit.
