--- a/TP03MainProj/Views/Events/Index.cshtml
+++ b/TP03MainProj/Views/Events/Index.cshtml
@@ -68,7 +68,7 @@
             </div>
         </div>
 
-        <div class="row justify-content-center section-row bg-warning pt-5 mt-5" id="quiz-section">
+        <div class="row justify-content-center section-row  shadow-lg rounded-5 bg-body pt-5 mb-5 mt-5" id="quiz-section" style="">
             <div class="col-lg-8 col-md-10 text-center">
                 <div class="row mb-3">
                     <h2 style="word-spacing: 2px;" class="fw-bold display-3">Common Phrases and Cultural Etiquette Quiz</h2>
