--- a/TP03MainProj/Views/Shared/_Layout.cshtml
+++ b/TP03MainProj/Views/Shared/_Layout.cshtml
@@ -21,11 +21,11 @@
     <link href="@Url.Content("~/Content/Customer/fonts/et-line-font/style.css")" rel="stylesheet" />
     <link href="@Url.Content("~/Content/scrollToTop.css")" rel="stylesheet" />
 </head>
-<body class="bg-warning">
+<body class="" style="">
     <!-- page preloader begin -->
     <!-- page preloader close -->
     <!-- header begin -->
-    <div class="container-fluid bg-warning" style="position: relative; z-index: 1030;">
+    <div class="container-fluid" style="position: relative; z-index: 1030; background: linear-gradient(to right, #FFA500, #FF8C00, #FF7F50, #FF4500); ">
         <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3">
 
 
@@ -57,13 +57,13 @@
 
     <!-- header close -->
     <!-- content begin -->
-    <div class="bg-warning">
+    <div class="" style="background: linear-gradient(to right, #FFA500, #FF8C00, #FF7F50, #FF4500);">
         @RenderBody()
 
     </div>
     <!-- content close -->
     <!-- footer begin -->
-    <div class="container bg-warning">
+    <div class="container-fluid bg-warning" style="background: linear-gradient(to right, #FFA500, #FF8C00, #FF7F50, #FF4500);">
         <footer class="footer py-5">
             <div class="row">
                 <div class="col-4 offset-1">
@@ -99,7 +99,7 @@
                 </div>
             </div>
 
-            <div class="d-flex justify-content-between border-white border-opacity-25  py-4 my-4 border-top">
+            <div class="d-flex justify-content-center border-white border-opacity-25   py-4 my-4 border-top">
                 <p class="text-white">© 2024 The Quad. All rights reserved.</p>
             </div>
         </footer>
