--- a/TP03MainProj/Views/Events/Attractions/Filipino.cshtml
+++ b/TP03MainProj/Views/Events/Attractions/Filipino.cshtml
@@ -5,12 +5,12 @@
     <!-- Famous Monument Section -->
     <div class="col-md-6">
         <div class="text-center mb-3">
-            <h3 class="fs-3 fw-bold bg-black w-50 text-white rounded">Famous Monument</h3>
+            <h3 class="fs-3 fw-bold bg-black w-50 text-white rounded-5">Famous Monument</h3>
         </div>
 
-        <div class="mt-3 shadow-sm p-3 bg-body rounded">
+        <div class="mt-3 shadow-lg p-3 bg-body rounded-5">
             <div class="text-center">
-                <img src="@Url.Content("~/Content/Images/Attractions/Filipino_Attraction.jpg")" class="img-fluid w-50 rounded shadow" alt="Chinese Attraction">
+                <img src="@Url.Content("~/Content/Images/Attractions/Filipino_Attraction.jpg")" class="img-fluid w-50 rounded-5 shadow" alt="Chinese Attraction">
             </div>
             <h4 class="fs-5 text-center fw-bold mt-1 mb-2 text-decoration-underline">Dr. Jose P Rizal Monument</h4>
             <p class="mx-auto w-75 ">
@@ -23,15 +23,15 @@
     <!-- Famous Restaurants Section -->
     <div class="col-md-6">
         <div class="mb-3 text-center">
-            <h3 class="fs-3 fw-bold bg-black w-50 text-white rounded">Famous Restaurants</h3>
+            <h3 class="fs-3 fw-bold bg-black w-50 text-white rounded-5">Famous Restaurants</h3>
         </div>
-        <div class="shadow-sm p-3 bg-body rounded p-4 mb-5">
+        <div class="shadow-lg p-3 bg-body rounded-5 p-4 mb-5">
             <h4 class="fw-bold mb-3 text-start text-decoration-underline">Inasal Express</h4>
             <p class="mx-auto" style="max-width: 90%;">
                 Another new laneway spot awaits at Inasal Express. Tucked away off the La Trobe Street entrance to Melbourne Central, the crew serves 'blow out' meat feasts and flame-grilled meal sets. Try epic pork knuckle, sizzling chicken maryland and crispy skin salmon. All served with a cute heart shaped portion of rice. Share giant platters of meat with a carnivorous mate, then peruse the dessert menu. Featuring halo halo crushed ice with pandan jelly, caramel banana bread flan (lechenana) and more.
             </p>
         </div>
-        <div class="shadow-sm p-3 bg-body rounded p-4 mb-5">
+        <div class="shadow-lg p-3 bg-body rounded-5 p-4 mb-5">
             <h4 class="fw-bold mb-3 text-start text-decoration-underline">Ceree</h4>
             <p class="mx-auto" style="max-width: 90%;">
                 What started as a spot serving occasional Filipino specials has turned into a cult-status cafe for Filo expats. Formally known as The Basement, Ceree has moved to new digs in Spring Street. The cafe is loved most of all for its hearty silog: a breakfast set of garlic rice and fried eggs, served with a side of juicy meat. Other local treats include sweet and sticky karioka rice balls and ube sponge cake. Follow Ceree on Instagram to see what's on the menu.
