--- a/TP03MainProj/Views/Events/Attractions/Korean.cshtml
+++ b/TP03MainProj/Views/Events/Attractions/Korean.cshtml
@@ -4,12 +4,12 @@
     <!-- Famous Monument Section -->
     <div class="col-md-6">
         <div class="text-center mb-3">
-            <h3 class="fs-3 fw-bold bg-black w-50 text-white rounded">Famous Monument</h3>
+            <h3 class="fs-3 fw-bold bg-black w-50 text-white rounded-5">Famous Monument</h3>
         </div>
 
-        <div class="mt-3 shadow-sm p-3 bg-body rounded">
+        <div class="mt-3 shadow-lg p-3 bg-body rounded-5">
             <div class="text-center">
-                <img src="@Url.Content("~/Content/Images/Attractions/Filipino_Attraction.jpg")" class="img-fluid w-50 rounded shadow" alt="Chinese Attraction">
+                <img src="@Url.Content("~/Content/Images/Attractions/Filipino_Attraction.jpg")" class="img-fluid w-50 rounded-5 shadow" alt="Chinese Attraction">
             </div>
             <h4 class="fs-5 text-center fw-bold mt-1 mb-2 text-decoration-underline">Koreatown</h4>
             <p class="mx-auto w-75 ">
@@ -22,16 +22,16 @@
     <!-- Famous Restaurants Section -->
     <div class="col-md-6">
         <div class="mb-3 text-center">
-            <h3 class="fs-3 fw-bold bg-black w-50 text-white rounded">Famous Restaurants</h3>
+            <h3 class="fs-3 fw-bold bg-black w-50 text-white rounded-5">Famous Restaurants</h3>
         </div>
-        <div class="shadow-sm p-3 bg-body rounded p-4 mb-5">
+        <div class="shadow-lg p-3 bg-body rounded-5 p-4 mb-5">
             <h4 class="fw-bold mb-3 text-start text-decoration-underline">Unlimited cheesy corn dogs at BBQ King</h4>
             <p class="mx-auto" style="max-width: 90%;">
                 This fresh new all-you-can-eat spot has all the Korean food staples covered. Enjoy unlimited premium meat, hot molten corn cheese, cult-status bo ssam (juicy pork in refreshing lettuce cups) and more. Which includes slightly sweet, perfectly crunchy, mozzarella loaded Korean-style corn dogs. Find BBQ King at 280 King Street, walk-ins only!
 
             </p>
         </div>
-        <div class="shadow-sm p-3 bg-body rounded p-4 mb-5">
+        <div class="shadow-lg p-3 bg-body rounded-5 p-4 mb-5">
             <h4 class="fw-bold mb-3 text-start text-decoration-underline">Korean sandwiches from Eggholic</h4>
             <p class="mx-auto" style="max-width: 90%;">
                 At long last, one of the OG spots for street toast has made its way to the CBD.  This little hole-in-the-wall is serving up super stacked, buttery brioche filled with fluffy, cheesy egg. Take it classic with bacon, spicy with kimchi, loaded with crab or filled with fried spam. The crew has also launched an epic iced coffee menu. There are Biscoff-loaded 'cream-cinos', honeycomb-topped caramel lattes, hojicha treats and injeolmi delights.
