--- a/TP03MainProj/Views/Home/Index.cshtml
+++ b/TP03MainProj/Views/Home/Index.cshtml
@@ -157,7 +157,7 @@
         </div>
     </section>
 
-    <section id="cultural-events" class="bg-white py-5">
+    <section id="cultural-events" class="bg-body py-5">
         <div class="container">
             <div class="row mb-4">
                 <div class="col-12 text-start">
