--- a/TP03MainProj/Views/Events/_EventsList.cshtml
+++ b/TP03MainProj/Views/Events/_EventsList.cshtml
@@ -1,4 +1,5 @@
 ﻿﻿@model IEnumerable<TP03MainProj.Models.Events>
+@using TP03MainProj.Helper
 <div class="container mt-3">
     <div class="row">
         <!-- Events Column -->
@@ -8,10 +9,11 @@
                 <h3 class="my-4 p-3 bg-light rounded">Events for the date: <span class="text-decoration-underline">@ViewBag.FormattedDate</span></h3>
                 foreach (var evt in Model)
                 {
+                    var imagePath = ImageHelper.GetImagePath(evt.Title);
                     <div class="row mb-4 shadow-lg p-3 bg-body rounded">
                         <!-- Image Area -->
                         <div class="col-md-4 d-flex justify-content-center align-items-center">
-                            <img src="@Url.Content("~/Content/Customer/images/services/1.webp")" alt="@evt.Title" style="max-height: 250px;" class="img-fluid w-100 rounded h-auto">
+                            <img src="@Url.Content(imagePath)" alt="@evt.Title" style="max-height: 250px;" class="img-fluid w-100 rounded h-auto">
                         </div>
                         <!-- Event Details -->
                         <div class="col-md-8">
@@ -23,6 +25,7 @@
                         </div>
                     </div>
                 }
+
             }
             else
             {
